trunk/ocean/db/ebtree/c/ebnode.d


/* Insert eb64_node <neww> into subtree starting at node root <root>, using
 * signed keys. Only neww->key needs be set with the key. The eb64_node
 * is returned. If root->b[EB_RGHT]==1, the tree may only contain unique keys.
 */
Node64Ptr __eb64i_insert(eb_root* root, Node64Ptr neww);


typedef void* Node128Ptr;

struct Cent
{
    long a,b;
}

struct UCent
{
    long a,b;
}

/* Return leftmost node in the tree, or NULL if none */
Node128Ptr eb128_first(eb_root* root);

/* Return rightmost node in the tree, or NULL if none */
Node128Ptr eb128_last(eb_root* root);

/* Return next node in the tree, or NULL if none */
Node128Ptr eb128_next(Node128Ptr eb128);

/* Return previous node in the tree, or NULL if none */
Node128Ptr eb128_prev(Node128Ptr eb128);

/* Return next node in the tree, skipping duplicates, or NULL if none */
Node128Ptr eb128_next_unique(Node128Ptr eb128);

/* Return previous node in the tree, skipping duplicates, or NULL if none */
Node128Ptr eb128_prev_unique(Node128Ptr eb128);

/* Delete node from the tree if it was linked in. Mark the node unused. Note
 * that this function relies on a non-inlined generic function: eb_delete.
 */
void eb128_delete(Node128Ptr eb128);

/*
 * The following functions are not inlined by default. They are declared
 * in eb128tree.c, which simply relies on their inline version.
 */
Node128Ptr eb128_lookup(eb_root* root, UCent x);
Node128Ptr eb128i_lookup(eb_root* root, Cent x);
Node128Ptr eb128_lookup_le(eb_root* root, UCent x);
Node128Ptr eb128_lookup_ge(eb_root* root, UCent x);
Node128Ptr eb128_insert(eb_root* root, Node128Ptr neww);
Node128Ptr eb128i_insert(eb_root* root, Node128Ptr neww);

/*
 * The following functions are less likely to be used directly, because their
 * code is larger. The non-inlined version is preferred.
 */

/* Delete node from the tree if it was linked in. Mark the node unused. */
void __eb128_delete(Node128Ptr eb128);

/*
 * Find the first occurence of a key in the tree <root>. If none can be
 * found, return NULL.
 */
Node128Ptr __eb128_lookup(eb_root* root, UCent x);

/*
 * Find the first occurence of a signed key in the tree <root>. If none can
 * be found, return NULL.
 */
Node128Ptr __eb128i_lookup(eb_root* root, Cent x);

/* Insert eb128_node <neww> into subtree starting at node root <root>.
 * Only neww->key needs be set with the key. The eb128_node is returned.
 * If root->b[EB_RGHT]==1, the tree may only contain unique keys.
 */
Node128Ptr __eb128_insert(eb_root* root, Node128Ptr neww);

/* Insert eb128_node <neww> into subtree starting at node root <root>, using
 * signed keys. Only neww->key needs be set with the key. The eb128_node
 * is returned. If root->b[EB_RGHT]==1, the tree may only contain unique keys.
 */
Node128Ptr __eb128i_insert(eb_root* root, Node128Ptr neww);